[gd_scene load_steps=15 format=2]

[ext_resource path="res://screens/configurationScene/json_manager.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=2]
[ext_resource path="res://212 Queenie Sans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/images/logo.png" type="Texture" id=4]
[ext_resource path="res://screens/animations/logoAnimation.tres" type="Animation" id=5]
[ext_resource path="res://sprites/images/engrenagem1.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "config_done"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("Popup/engre1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup/engre2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, -195.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Popup/engre4:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Popup/engre3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Popup/engre1:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Popup/engre2:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Popup/engre4:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Popup/engre3:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Popup/Label:valign")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Popup/Label:text")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.8, 2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Muito bem! Agora, por favor, aguarde enquanto configuramos algumas coisinhas...", "Muito bem! Agora, por favor, aguarde enquanto configuramos algumas coisinhas...", "Tudo pronto! Preparado?", "Vamos lá!" ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Popup/Label:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.8, 2, 2.2, 3.2, 3.4, 3.9, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "config_done2"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("Popup2/engre1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup2/engre1:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Popup2/engre2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Popup2/engre2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, -195.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Popup2/engre4:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Popup2/engre4:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Popup2/engre3:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Popup2/engre3:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Popup2/Label:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.8, 2, 2.2, 3.2, 3.4, 3.9, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Popup2/Label:valign")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.8, 2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 1 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Popup2/Label:text")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.8, 2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Aguarde! Estamos carregando o jogo...", "Aguarde! Estamos carregando o jogo...", "Tudo pronto! Preparado?", "Vamos lá!" ]
}

[sub_resource type="Animation" id=4]
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Popup/engre1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup/engre2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, -375.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Popup/engre4:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Popup/engre3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "configuration2"
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Popup2/engre1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Popup2/engre2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, -375.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Popup2/engre4:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Popup2/engre3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/logo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("label1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("label2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("label3:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("option1:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -770.735, -35.6429 ), Vector2( -200, -36 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("option1:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("option1/carregarArquivo:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -17.323, -5.38232 ), Vector2( -12.1774, -6.5874 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("option1/carregarArquivo:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("option1/label:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 112.162, 14.3347 ), Vector2( 28.5171, 10.6895 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("option1/label:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("option2:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 716.508, -34.5349 ), Vector2( 295, -35 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("option2:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("option2/baixarModelo:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -17.323, -5.38232 ), Vector2( -11.038, -6.08057 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("option2/baixarModelo:self_modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("option2/label:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 141, 14 ), Vector2( 48, 11 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("option2/label:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 1
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
position = Vector2( 309.423, 476.442 )
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.972549 )
margin_left = -310.0
margin_top = -477.0
margin_right = 715.0
margin_bottom = 123.0
color = Color( 0.721569, 0.717647, 0.87451, 1 )

[node name="option1" type="ColorRect" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -770.735
margin_top = -35.6429
margin_right = -463.735
margin_bottom = 27.3571
color = Color( 1, 1, 1, 0.478431 )

[node name="carregarArquivo" type="TouchScreenButton" parent="option1"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -17.323, -5.38232 )
scale = Vector2( 0.298239, 0.155961 )
normal = ExtResource( 2 )

[node name="label" type="Label" parent="option1"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 112.162
margin_top = 14.3347
margin_right = 374.162
margin_bottom = 60.3347
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Carregar arquivo"
autowrap = true

[node name="option2" type="ColorRect" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 716.508
margin_top = -34.5349
margin_right = 1005.51
margin_bottom = 27.4651
color = Color( 1, 1, 1, 0.478431 )

[node name="baixarModelo" type="TouchScreenButton" parent="option2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -17.323, -5.38232 )
scale = Vector2( 0.280857, 0.155961 )
normal = ExtResource( 2 )

[node name="label" type="Label" parent="option2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 141.0
margin_top = 14.0
margin_right = 350.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Baixar modelo"
autowrap = true

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = -149.088
margin_top = -358.854
margin_right = 542.912
margin_bottom = 11.1462
window_title = "Abrir um Arquivo"
mode = 0
access = 2
current_dir = "C:/Users"
current_file = "Public"
current_path = "C:/Users/Public"

[node name="label1" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -81.035
margin_top = -453.513
margin_right = 533.965
margin_bottom = -397.513
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.996078, 0.996078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Olá, bem-vindo ao Graphic Quiz Generator!"
valign = 1
autowrap = true
clip_text = true

[node name="label2" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -283.0
margin_top = -351.0
margin_right = 696.0
margin_bottom = -249.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "- Para começar, basta fazer upload de um arquivo no formato .json com as configurações do jogo que deseja criar."
autowrap = true
clip_text = true

[node name="label3" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -283.0
margin_top = -243.0
margin_right = 696.0
margin_bottom = -154.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "- Caso não saiba como criar esse arquivo, baixe o nosso formato de exemplo, configure-o como desejar e volte aqui!"
autowrap = true

[node name="ColorRect" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = -310.0
margin_top = -476.0
margin_right = 713.0
margin_bottom = 124.0

[node name="logo" type="Sprite" parent="ColorRect"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 487.813, 279.795 )
scale = Vector2( 0.177264, 0.177264 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/config_done = SubResource( 2 )
anims/config_done2 = SubResource( 3 )
anims/configuration = SubResource( 4 )
anims/configuration2 = SubResource( 5 )
anims/logoAnimation = ExtResource( 5 )
anims/logo_leaving = SubResource( 6 )
anims/opening = SubResource( 7 )

[node name="Popup" type="Popup" parent="."]
margin_left = -309.0
margin_top = -475.0
margin_right = 715.0
margin_bottom = 124.0

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_left = -0.950012
margin_top = -0.0529022
margin_right = 1023.05
margin_bottom = 598.947
color = Color( 1, 1, 1, 0.607843 )

[node name="Label" type="Label" parent="Popup"]
margin_left = 113.0
margin_top = 61.0
margin_right = 952.0
margin_bottom = 528.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Vamos lá!"
align = 1
valign = 1
autowrap = true

[node name="engre1" type="Sprite" parent="Popup"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 443.811, 326.726 )
rotation = 6.28319
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="engre3" type="Sprite" parent="Popup"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 598.24, 359.99 )
rotation = 6.28319
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="engre4" type="Sprite" parent="Popup"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 560.837, 250.781 )
rotation = 6.28319
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="engre2" type="Sprite" parent="Popup"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 525.309, 323.094 )
rotation = -6.54498
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 6 )

[node name="Popup2" type="Popup" parent="."]
margin_left = -309.0
margin_top = -475.0
margin_right = 715.0
margin_bottom = 124.0

[node name="ColorRect" type="ColorRect" parent="Popup2"]
margin_left = -0.950012
margin_top = -0.0529022
margin_right = 1023.05
margin_bottom = 598.947
color = Color( 1, 1, 1, 0.607843 )

[node name="Label" type="Label" parent="Popup2"]
margin_left = 113.0
margin_top = 61.0
margin_right = 952.0
margin_bottom = 528.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Aguarde! Estamos carregando o jogo..."
align = 1
autowrap = true

[node name="engre1" type="Sprite" parent="Popup2"]
position = Vector2( 443.811, 326.726 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="engre3" type="Sprite" parent="Popup2"]
position = Vector2( 598.24, 359.99 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="engre4" type="Sprite" parent="Popup2"]
position = Vector2( 560.837, 250.781 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="engre2" type="Sprite" parent="Popup2"]
position = Vector2( 525.309, 323.094 )
rotation = -0.261799
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 6 )

[connection signal="pressed" from="option1/carregarArquivo" to="." method="_on_carregarArquivo_pressed"]
[connection signal="pressed" from="option2/baixarModelo" to="." method="_on_baixarModelo_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
